--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -9,6 +9,60 @@
     margin: 20px;
 }
 .order-summery{
+    height: 500px;
+    border-radius: 15px;
+    margin: 20px 20px 0 0;
     text-align: center;
     color: #FE8280;
+    background-color: #f3f2f2;
+}
+.product-list{
+    color: black;
+}
+.rendom-btn{
+    width: 80%;
+    background-color: #fafafa;
+    border-radius: 5px;
+    border: none;
+    color: #FE8280;
+    font-family: lato;
+    font-weight: 600;
+    font-size: 16px;
+}
+.rendom-btn:hover{
+    background-color: #FE8280;
+    color: #fafafa;
+}
+
+
+@media screen and (max-width: 767px) {
+   .products-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 45px;
+    margin: 20px;
+    justify-items: center;
+   } 
+   .order-summery{
+    height: 500px;
+    text-align: center;
+    color: #494646;
+    background-color: #ffffff;
+    font-size: 14px;
+    }
+    .rendom-btn{
+        width: 100%;
+        background-color: #fafafa;
+        border-radius: 5px;
+        border: none;
+        color: #FE8280;
+        font-family: lato;
+        font-weight: 600;
+        font-size: 16px;
+    }
+    .rendom-btn:hover{
+        background-color: #FE8280;
+        color: #fafafa;
+    }
+
 }
